syntax = "proto3";
import "commontype/ClientInfo.proto";
import "commontype/TopicMessage.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.retain.rpc.proto";
option java_outer_classname = "RetainCoProcProtos";

package retainservice;

message RetainSetMetadata{
  uint32 count = 1;
  uint64 estExpire = 2;
}

message RetainMessage{
  commontype.Message message = 1;
  commontype.ClientInfo publisher = 2;
}

message RetainMessagePack{
  map<string, RetainMessage> topicMessages = 1; // key: topic
}

message BatchRetainRequest{
  uint64 reqId = 1;
  map<string, RetainMessagePack> retainMessagePack = 2; // key: tenantId
}

enum RetainResult {
  RETAINED = 0;
  CLEARED = 1;
  ERROR = 2;
}

message RetainResultPack{
  map<string, RetainResult> results = 2; // key: topic
}

message BatchRetainReply{
  uint64 reqId = 1;
  map<string, RetainResultPack> results = 2;
}

message MatchParam{
  map<string, uint32> topicFilters = 1; // key: topicFilters value: limit
}

message BatchMatchRequest{
  uint64 reqId = 1;
  map<string, MatchParam> matchParams = 2; // key: tenantId

}

message MatchError{

}

message Matched{
  repeated commontype.TopicMessage messages = 1;
}

message MatchResult{
  oneof Type{
    Matched ok = 1;
    MatchError error = 2;
  }
}

message MatchResultPack{
  map<string, MatchResult> results = 1; // key: topic filter
}

message BatchMatchReply{
  uint64 reqId = 1;
  map<string, MatchResultPack> resultPack = 2;// key: tenantId
}

message GCRequest {
  uint64 reqId = 1;
}

message GCReply {
  uint64 reqId = 1;
}

message RetainServiceRWCoProcInput{
  oneof type{
    BatchRetainRequest batchRetain = 1;
    GCRequest gc = 2;
  }
}

message RetainServiceRWCoProcOutput{
  oneof type{
    BatchRetainReply batchRetain = 1;
    GCReply gc = 2;
  }
}

message RetainServiceROCoProcInput{
  oneof type{
    BatchMatchRequest batchMatch = 1;
  }
}

message RetainServiceROCoProcOutput{
  oneof type{
    BatchMatchReply batchMatch = 1;
  }
}


